Expose independent activities and mapless combat controls (#478)
Closes #327
